# KVM-over-USB

./: LICENSE  README.md  README_en-us.md
client/: Mini-KVM.py  compiler.ps1  controller_ch9329.py  default.py  hid_def.py  hid_device.py  main.py  pyproject.toml  requirements.txt  server_simple.py  update_translate.ps1  usb_kvm_client.py
client/data/: keyboard_ch9329_code2key.yaml  keyboard_ch9329code2Key.yaml  keyboard_scancode2hid.yml
client/translate/: trans_cn.qm  trans_cn.ts  trans_zh_cn.qm  trans_zh_cn.ts
client/ui/: about.ui  about_ui.py  controller_setup.ui  controller_setup_ui.py  device_setup_dialog_ui.py  indicator_ui.py  main.ui  main_ui.py  numboard_ui.py  paste_board_ui.py  regenerate_ui.bat  regenerate_ui.ps1  shortcut_key_ui.py
